feat: Add PNG icons for PWA and service worker
Updates the manifest and service worker to include new PNG icon sizes (192x192 and 512x512). This improves the Progressive Web App experience by providing appropriate icons for various display contexts and ensures better caching for offline access.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -4,6 +4,16 @@
   "description": "רדיו פרימיום - אפליקציית רדיו ישראלית חינמית ונקייה, מותאמת לשימוש ברכב ובכל מקום. האזן לתחנות הרדיו המובילות בישראל עם ממשק פשוט וידידותי.",
   "icons": [
     {
+      "src": "images/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "images/icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
       "src": "icon.svg",
       "type": "image/svg+xml",
       "sizes": "any",
