fix: Improve audio context setup and media session metadata
The AudioContext constructor is now called without arguments to improve compatibility. Media Session metadata updates are also more robust, and unnecessary logic for handling track changes has been removed. Icons have been updated for better PWA experience.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -49,7 +49,7 @@
       "name": "המועדפים שלי",
       "short_name": "מועדפים",
       "description": "הצג את תחנות הרדיו המועדפות עליך",
-      "url": "/?filter=favorites",
+      "url": "./?filter=favorites",
       "icons": [
         {
           "src": "shortcut-favorites.png",
