feat: Update app description for clarity
Refine the application description to be more concise and highlight key features like speed, cleanliness, car usability, ad-free experience, and home screen installation. This improves user understanding of the app's value proposition.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,8 @@
+
 {
   "short_name": "רדיו פרימיום",
   "name": "רדיו פרימיום",
-  "description": "רדיו פרימיום - אפליקציית רדיו ישראלית חינמית ונקייה, מותאמת לשימוש ברכב ובכל מקום. האזן לתחנות הרדיו המובילות בישראל עם ממשק פשוט וידידותי.",
+  "description": "נגן רדיו ישראלי מהיר ונקי, מותאם לשימוש ברכב. האזן לתחנות המובילות בישראל ללא פרסומות. ניתן להתקנה על מסך הבית.",
   "lang": "he",
   "dir": "rtl",
   "start_url": ".",
