--- a/manifest.json
+++ b/manifest.json
@@ -17,19 +17,19 @@
   ],
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon-192-v2.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any"
     },
     {
-      "src": "icon-512.png",
+      "src": "icon-512-v2.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any"
     },
     {
-      "src": "icon-512.png",
+      "src": "icon-512-v2.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
