--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -17,14 +17,9 @@
   ],
   "icons": [
     {
-      "src": "icon-192-v2.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512-v2.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "any"
     }
   ]
 }
