--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "firebase": "^9.23.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
