--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -17,6 +17,11 @@
   ],
   "icons": [
     {
+      "src": "icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
+    },
+    {
       "src": "icon-192-v2.png",
       "sizes": "192x192",
       "type": "image/png",
